--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,6 +80,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Use Item",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +AxisMappings=(AxisName="Move Forward/Back",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Right/Left",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Look Right/Left",Scale=1.000000,Key=MouseX)
